--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
         - id: catalog-service
           uri: lb://catalog-service
           predicates:
-            - Path=/api/books/**, /api/authors/**
+            - Path=/api/books/**, /api/authors/**, /books/**
         - id: user-service
           uri: lb://user-service
           predicates:
@@ -20,6 +20,10 @@ spring:
           uri: lb://loan-service
           predicates:
             - Path=/api/loans/**
+        - id: recommendation-service
+          uri: lb://recommendation-service
+          predicates:
+            - Path=/recommendations/**
 
 server:
   port: 8080
